# advent-of-code

./: .gitignore  README.md
2019/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2019/intcode/: __init__.py
2020/day1/: main.py
2020/day10/: main.py
2020/day11/: main.py
2020/day12/: main.py  test.py
2020/day13/: main.py
2020/day14/: main.py
2020/day15/: main.py
2020/day3/: main.py
2020/day4/: main.py
2020/day5/: main.py
2020/day6/: main.py
2020/day7/: main.py
2020/day8/: main.py
2020/day9/: main.py
2021/: README.md  utils.py
2021/day1/: main.py
2021/day10/: main.py
2021/day11/: main.py
2021/day12/: main.py
2021/day13/: main.py
2021/day14/: main.py
2021/day15/: main.py
2021/day16/: main.py
2021/day17/: main.py
2021/day18/: main.py
2021/day2/: main.py
2021/day3/: main.py
2021/day4/: main.py
2021/day5/: main.py
2021/day6/: main.py
2021/day7/: main.py
2021/day8/: main.py
2021/day9/: main.py
2022/day1/: main.py
2022/day10/: main.py
2022/day11/: main.py
2022/day12/: main.py  (+1 more)
2023/: README.md  project.toml  pyproject.toml  start.py  utils.py
2023/day1/: main.py
2023/day10/: main.py
2023/day11/: main.py
2023/day12/: main.py
2023/day13/: main.py
2023/day14/: main.py
2023/day15/: main.py
2023/day2/: main.py
2023/day3/: main.py
2023/day4/: main.py
2023/day5/: main.py
2023/day6/: main.py
2023/day7/: main.py
2023/day8/: main.py
2023/day9/: main.py
2024/: utils.py
(+16 files in other folders)
